automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@
 				<!--/////////// End Archive List //////////-->
 
 				<!--/////////// Deals //////////-->
-				<div class="clearfix">
-					<section class="shadow col-1 first">
+					<section class="shadow col-1 first clearfix">
 						<figure>
 							<img src="images/lady_bug_shoe.jpg" alt="Pair of Lady Bug Shoes">
 							<figcaption>royalty free image from www.sxc.hu</figcaption>
@@ -165,7 +164,6 @@
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 					</section>
-				</div>
 				<!--/////////// Ends Deals //////////-->
 
 			</div><!-- .wrapper -->
