--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
 				<!--/////////// End Archive List //////////-->
 
 				<!--/////////// Deals //////////-->
-					<section class="shadow col-1 first clearfix">
+				<div clearfix>
+					<section class="shadow col-1 first">
 						<figure>
 							<img src="images/lady_bug_shoe.jpg" alt="Pair of Lady Bug Shoes">
 							<figcaption>royalty free image from www.sxc.hu</figcaption>
@@ -164,6 +165,7 @@
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 					</section>
+				</div> <!-- clearfix -->
 				<!--/////////// Ends Deals //////////-->
 
 			</div><!-- .wrapper -->
