--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 				<!--/////////// End Archive List //////////-->
 
 				<!--/////////// Deals //////////-->
-				<div id="deals" class="clear">
+				<div class="clear">
 					<section class="shadow col-1 first">
 						<figure>
 							<img src="images/lady_bug_shoe.jpg" alt="Pair of Lady Bug Shoes">
