--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
 
 				<h2 class="milk_text">Featured Brands</h2>
 
+				<div class="row clearfix">
 				<!--/////////// Featured Brands //////////-->
-				<div class="row clear"
+
 					<section class="shadow col-2 first">
 						<figure>
 							<img src="images/shoes_on_grass.jpg" alt="Photo of shoes in the wet grass">
