--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 				<h2 class="milk_text">Featured Brands</h2>
 
-				<div class="row clearfix">
+				<div class="row">
 				<!--/////////// Featured Brands //////////-->
 
 					<section class="shadow col-2 first">
