automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
 				</div> <!-- row -->
 				<!--/////////// End Archive List //////////-->
 
+				<div class="row">
 				<!--/////////// Deals //////////-->
-				<div class="clear">
 					<section class="shadow col-1 first">
 						<figure>
 							<img src="images/lady_bug_shoe.jpg" alt="Pair of Lady Bug Shoes">
@@ -168,9 +168,8 @@
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 					</section>
-				</div> <!-- clear -->
 				<!--/////////// Ends Deals //////////-->
-
+			</div> <!-- row -->
 			</div><!-- .wrapper -->
 
 		</div><!-- #wood -->
