automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 				</div> <!-- row -->
 				<!--/////////// End Archive List //////////-->
 
-				<div class="row">
+				<div class="row clearfix">
 				<!--/////////// Deals //////////-->
 					<section class="shadow col-1 first">
 						<figure>
