--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
 			<div class="wrapper">
 
-				<div class="col-1.first border_right">
+				<div class="col-1 first border_right">
 					<h3>Contact</h3>
 					<p>email: <a href="mailto:info@zhwshoes.com">info@zhwshoes.com</a><br>
 					phone: +1 504 555 5555</p>
